--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,13 +1,13 @@
 :root {
-    --font-size: 14;
-    --font-size-hints: 12;
-    --font-size-url: 12;
+    --font-size: 16;
+    --font-size-hints: 13;
+    --font-size-url: 13;
 
     --font-weight: normal;
     --font-weight-medium: medium;
     --font-weight-bold: bold;
 
-    --font: "Helvetica Neue", "Helvetica", "Arial", sans-serif; /* Font used in the UI */
+    --font: "Inter", "Helvetica Neue", "Helvetica", "Arial", sans-serif; /* Font used in the UI */
   
     --padding: 2px;
     --padding-vomnibar: 6px;
@@ -28,9 +28,10 @@
     --border: #404046;
 
 /* -------- HINTS -------- */
-    --bg-hints: #FFD752;      /* Background color of link hints */
+    --bg-hints: #444444;      /* Background color of link hints */
     --border-hints: #F4CA46;  /* Border color of link hints */
-    --fg-hints: #000000;      /* Text color of link hints, (don't forget to change `#vimiumHintMarkerContainer div > .matchingCharacter ~ span`) */
+    --fg-hints: #ffffff;      /* Text color of link hints, (don't forget to change `#vimiumHintMarkerContainer div > .matchingCharacter ~ span`) */
+    --hints-main-fg: #43b1e9  /* Text color of matched hints */
 }
 
 /* --------------------------------- CSS --------------------------------- */
@@ -38,9 +39,9 @@
 /* -------- HINTS -------- */
 #vimiumHintMarkerContainer div.internalVimiumHintMarker, #vimiumHintMarkerContainer div.vimiumHintMarker {
     background: var(--bg-hints);
-    border: 1px solid var(--border-hints);
+    border: none;
     box-shadow: var(--shadow);
-    padding: 2px 3px;
+    padding: 3px 4px;
 }
 
 #vimiumHintMarkerContainer div span {
@@ -52,7 +53,7 @@
 }
 
 #vimiumHintMarkerContainer div > .matchingCharacter {
-    opacity: 0.3;
+    opacity: 0.4;
 }
 
 #vimiumHintMarkerContainer div > .matchingCharacter ~ span {
@@ -66,6 +67,10 @@
     border: 1px solid var(--border);
     box-shadow: var(--shadow);
     border-radius: 5px;
+    /*  Vomnibar Size & Alignment  */
+    left: 50%;
+    margin-left: -400px;
+    max-width: 800px;
 }
 
 /* Animate Slide in */
